# neo-stl

./: .gitignore  README.md  pyproject.toml
src/neo_stl/: compress.py  compress_fastsimp.py  compress_open3d.py  simplify_open3d.py
stl/: README.md
